# poetry_setup

./: README.md  pyproject.toml  run.bat  setup.bat
src/: main.py
